--- a/.env
+++ b/.env
@@ -36,4 +36,5 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=d5cb1356d494a270336bc44c39c0362a
+JWT_TOKEN_TTL=3600
 ###< lexik/jwt-authentication-bundle ###
